--- a/src/bitcoin-wallet-res.rc
+++ b/src/bitcoin-wallet-res.rc
@@ -17,13 +17,13 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "Litecoin"
-            VALUE "FileDescription",    "litecoin-wallet (CLI tool for " PACKAGE_NAME " wallets)"
+            VALUE "FileDescription",    "dillycoin-wallet (CLI tool for " PACKAGE_NAME " wallets)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "litecoin-wallet"
+            VALUE "InternalName",       "dillycoin-wallet"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "litecoin-wallet.exe"
-            VALUE "ProductName",        "litecoin-wallet"
+            VALUE "OriginalFilename",   "dillycoin-wallet.exe"
+            VALUE "ProductName",        "dillycoin-wallet"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
