--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -16,8 +16,8 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "Litecoin"
-            VALUE "FileDescription",    "dillycoin-tx (CLI Litecoin transaction editor utility)"
+            VALUE "CompanyName",        "Dillycoin"
+            VALUE "FileDescription",    "dillycoin-tx (CLI Dillycoin transaction editor utility)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "dillycoin-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
