--- a/contrib/init/org.dillycoin.dillycoind.plist
+++ b/contrib/init/org.dillycoin.dillycoind.plist
@@ -3,10 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>Label</key>
-	<string>org.bitcoin.bitcoind</string>
+	<string>org.dillycoin.dillycoind</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/usr/local/bin/bitcoind</string>
+		<string>/usr/local/bin/dillycoind</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
